# telegram-forwarder

./: .gitignore  Dockerfile  docker-compose.yml  example.env  get_session.py  get_topics.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/: common.py  db.py  listener.py  logger.py  main.py  names.py  populate.py  save_queue.py  telegram_types.py
